2003-09-30  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/demos/browse:		Added suitable [package require]
	* library/demos/hello:		lines to all the Tk demo scripts
	* library/demos/ixset:		which are not run as part of
	* library/demos/rmt:		something larger.  [FRQ 815118]
	* library/demos/rolodex: 
	* library/demos/square: 
	* library/demos/tcolor: 
	* library/demos/timer: 
	* library/demos/widget: 

2003-09-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/safe.test:    Accomodate TIP #150 in the results.
	* tests/textWind.test: Fix a dependancy on font size in 10.1

2003-09-30  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkCanvas.c (TkGetStringsFromObjs): 
	* generic/tkPanedWindow.c (PanedWindowWorldChanged): Private
	functions should be either static or prefixed with 'Tk' (thanks to
	George Staplin for spotting this.)

2003-09-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:    Implementation of TIP #150, "Provide
	* win/tkWinSend.c:    'send' command for Windows"
	* win/tkWinSendCom.h:
	* win/tkWinSendCom.c:

2003-09-26  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* macosx/tkMacOSXWm.c (TkWmStackorderToplevelWrapperMap): Add
	GetWindowFromPort() [Bug #812415]; make function static.

2003-09-25  Daniel Steffen  <das@users.sourceforge.net>

	* library/demos/widget: don't create iconwindow on aqua, but add
	about menu like on classic.
	* macosx/Makefile: pass MAKEOVERRIDES to pxbuild.
	* macosx/tkMacOSXButton.c: added -compound support for bevel buttons.

	* unix/configure:
	* unix/configure.in:
	* unix/tkConfig.sh.in: added TK_INCLUDE_SPEC to allow extensions to
	find installed Tk headers, parallel to TCL_INCLUDE_SPEC. [Bug 777203] 

2003-09-18  Chengye Mao <chengye.geo@yahoo.com>
	* generic/tkConsole.c: Fixed memroy leak [Bug 802435]

2003-09-18  Peter Spjuth  <peter.spjuth@space.se>
	* doc/grid.n:
	* tests/grid.test:
	* generic/tkGrid.c: Implementation of TIP#147,