@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXEvent.c,v 1.3 2003/02/19 19:27:46 wolfsuit Exp $
+ * RCS: @(#) $Id: tkMacOSXEvent.c,v 1.4 2003/09/30 23:26:09 wolfsuit Exp $
  */
 
 #include <stdio.h>
@@ -71,6 +71,16 @@ tkMacOSXFlushWindows ()
         }
         wRef=GetNextWindow(wRef);
     }
+}
+
+
+
+int
+XSync (Display *display, Bool flag)
+{
+    tkMacOSXFlushWindows();
+    display->request++;
+    return 0;
 }
 
 /*
